# triage-back

./: calendar_events.json  main.py  pyproject.toml  test_agent_tools.py  test_mcp_debug.py
app/: globals.py  mainapp.py
app/agents/: __init__.py  session_agents.py  triage_agent.py
app/api/: __init__.py  api.py
app/api/agents/: __init__.py  inv1_home.py  inv2_invoices.py
app/api/agents/settings/: __init__.py  fee.py  item.py  payment_method.py  tax.py
app/api/ai/: __init__.py  ai_brain.py  ai_guardrail.py  ai_langgraph.py  rag1_unit.py  rag2_llm.py  rag3_eval.py
app/api/mcp/: __init__.py  t4_employee.py  t4_entry.py  t4_history.py  t4_period.py  t4_schedule.py
app/api/root/: __init__.py
app/api/sessions/: __init__.py  r_coa.py  r_health.py  r_journal_entries.py  r_periods.py  r_reports.py  r_transaction.py
app/api/triage/: __init__.py  bi_rag.py  inv2content.py  r_chunk.py  r_embedding.py  ser_chunk.py  ser_embedding.py
app/data/: comprehensive_decision_tree.json  decisiontree_type.py  dividend_strategy_tree.json  divtree_data.py  models.py
app/mcp_conn/: mcp.json  mcp_client.py  mcp_client_strands.py  mcp_config.py  mcp_main.py  mcpmanager.py  test_context_issue.py  test_get_balance.py
app/mcp_local/calendar/: calendar_server.py
app/mcps/: mcp.json  mcp_main.py
app/observability/: http_logging.py  server_logging.py
app/schema/: root_schema.py  stream_response.py
app/sessions/: __init__.py
