[project]
name = "agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore>=1.11.0",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "botocore[crt] >= 1.35.0",
    "boto3>=1.43.14",
    "fastapi[standard]>=0.124.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "starlette>=1.2.0",
    "strands-agents >= 1.13.0",
    "strands-agents-tools>=0.6.0",
    "uvicorn>=0.48.0",
    "playwright>=1.60.0",
    "ipython>=9.14.1",
    "ddgs>=9.14.4",
    "opensearch-py>=3.2.0",
    "retrying>=1.4.2",
    "streamlit>=1.58.0",
    "nest-asyncio>=1.6.0",
    "reportlab>=4.5.1",
    "tavily>=1.1.0",
    "yfinance>=1.4.1",
    "matplotlib>=3.10.9",
    "langchain>=1.3.7",
    "langchain-aws>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]


